--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -93,6 +93,10 @@ jobs:
             await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
             await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
           
+            // Extra wait to ensure dynamic content loads
+            console.log("Waiting for dynamic content to load...");
+            await sleep(3000);
+          
             // Stage 6: Extract Recommended Books.
             console.log("Extracting Recommended Books...");
             const recommendedBooks = await page.evaluate(() => {
@@ -149,6 +153,7 @@ jobs:
             }
           
             // Stage 9: Save final HTML of the browse page.
+            console.log("Saving final HTML of the browse page...");
             const finalHtml = await page.content();
             const htmlFile = `./screenshots/pubby_final_page_${Date.now()}.html`;
             fs.writeFileSync(htmlFile, finalHtml);
